eramba/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eramba-ingress
  namespace: eramba
spec:
  ingressClassName: nginx
  rules:
  - host: grc.secyour.space # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eramba-service
            port:
              number: 80
